fix: z-indexing for navigations

--- a/src/components/NavSecondLevel/nav-second-level.scss
+++ b/src/components/NavSecondLevel/nav-second-level.scss
@@ -58,6 +58,6 @@ li.active .nav-second-level {
 
 .side-nav-expanded {
     ul.nav-second-level {
-        width: 24rem;
+        width:22.3rem;;
     }
 }
